# open-code

./: README.md  hello.py  main.py  pyproject.toml  test.py
.ai-agent/: config.toml
agent/: agent.py  event.py  session.py
client/: llm_client.py  response.py
config/: config.py  loader.py
context/: manager.py
prompts/: system.py
tools/: base.py  registry.py  subagents.py
tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  web_fetch.py  web_search.py  write_file.py
ui/: tui.py
utils/: paths.py  text.py
